# kama-recipe-app

./: .env.example  .gitignore  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  railway.toml
backend/alembic/: env.py
backend/alembic/versions/: 8d4f50202906_initial_schema.py  a1b2c3d4e5f6_add_ingredient_category.py  b2c3d4e5f6a7_add_recipe_media_thumbnail_ref.py  c3d4e5f6a7b8_add_nutrition_and_notes.py  d4e5f6a7b8c9_add_how_to_serve.py  e5f6a7b8c9d0_add_recipe_search_index_status.py  f6a7b8c9d0e1_add_ask_tables.py  g7b8c9d0e1f2_add_artifact_tables.py  h8c9d0e1f2g3_add_pantry_item.py
backend/app/: __init__.py  main.py
backend/app/agents/: base.py  ingestion_agent.py  review_agent.py
backend/app/api/: admin.py  artifacts.py  ask.py  candidates.py  drafts.py  ingestion.py  ingredients.py  journal.py  media.py  pantry.py  recipes.py  search.py  tags.py
backend/app/core/: auth.py  circuit_breaker.py  config.py  database.py  error_handlers.py  llm.py  logging.py  qdrant.py  rate_limit.py  redis.py  redis_sync.py  s3.py
backend/app/domain/: __init__.py  ids.py
backend/app/models/: __init__.py  tables.py
backend/app/repositories/: __init__.py  artifact_repo.py  ask_session_repo.py  canonical_recipe_repo.py  ingredient_repo.py  (+11 more)
backend/scripts/: backfill_nutrition_notes.py  start.sh
backend/tests/: test_circuit_breaker.py  test_ocr_tools.py  test_review_agent.py  test_social_tools.py  test_sprint3_gaps.py  test_text_tools.py  test_tools.py  test_youtube_tools.py
(+117 files in other folders)
