[project]
name = "kama-backend"
version = "0.1.0"
description = "Kama API"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30.0",
  "alembic>=1.14.0",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.6.0",
  "pydantic-ai>=0.0.17",
  "redis>=5.2.0",
  "httpx>=0.28.0",
  "boto3>=1.35.0",
  "structlog>=24.4.0",
  "PyJWT[crypto]>=2.10.0",
  "cryptography>=44.0.0",
  "anthropic>=0.42.0",
  "python-multipart>=0.0.20",
  "trafilatura>=2.0.0",
  "tenacity>=9.1.4",
  "openai>=1.40.0",
  "google-cloud-vision>=3.13.0",
  "slowapi>=0.1.9",
  "google-api-python-client>=2.194.0",
  "youtube-transcript-api>=1.2.4",
  "yt-dlp>=2026.3.17",
  "ffmpeg-python>=0.2.0",
  "pillow>=12.2.0",
  "sentry-sdk[fastapi]>=2.14.0",
  "qdrant-client>=1.12.0",
  "rank-bm25>=0.2.2",
  "tiktoken>=0.7.0",
]

[tool.uv]
dev-dependencies = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.sdist]
include = ["app"]
